# MNIST

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: api.py
config/: fifth_experiment.yaml  fourth_experiment.yaml  initial_experiment.yaml  second_experiment.yaml  sixth_experiment.yaml  third_experiment.yaml
mlruns/0/: meta.yaml
mlruns/0/03ae48479e174d40bdff5743918d92f4/: meta.yaml
mlruns/0/03ae48479e174d40bdff5743918d92f4/metrics/: accuracy  f1_score  precision  recall  train_loss  validation_loss
mlruns/0/03ae48479e174d40bdff5743918d92f4/tags/: mlflow.source.name
mlruns/0/10a5f2db7a6f449ab5610d852c9c3f68/: meta.yaml
mlruns/0/10a5f2db7a6f449ab5610d852c9c3f68/metrics/: accuracy  f1_score  precision  recall  train_loss  validation_loss
mlruns/0/325ef8636c44478eb54092d3019ab077/: meta.yaml
mlruns/0/325ef8636c44478eb54092d3019ab077/metrics/: accuracy  f1_score  precision  recall  train_loss  validation_loss
mlruns/0/325ef8636c44478eb54092d3019ab077/params/: model
mlruns/0/d2130e831ba145bc9017f4120f0898ce/: meta.yaml
mlruns/0/d2130e831ba145bc9017f4120f0898ce/metrics/: accuracy  f1_score  precision  recall  train_loss  validation_loss
mlruns/0/e7755442900b447d8438f1466523d07a/: meta.yaml
mlruns/0/e7755442900b447d8438f1466523d07a/metrics/: accuracy  f1_score  precision  recall  train_loss  validation_loss
mlruns/0/ece4d3e47cda4072a86219bd1696fbb2/: meta.yaml
mlruns/0/ece4d3e47cda4072a86219bd1696fbb2/metrics/: accuracy  f1_score  precision  (+3 more)
src/: config_loader.py  models.py  read_one_image.py  train.py
tests/: test_train.py
